# merchant/internal/models/variant.model.go
@@ -6,8 +6,9 @@ import (
 
 type Variant struct {
 	gorm.Model
-	ProductID   uint    `gorm:"index"`
-	VariantName string  `gorm:"type:varchar(255)"`
-	Description string  `gorm:"type:text"`
-	Price       float64 `gorm:"type:decimal(10,2)"`
+	ProductID   uint       `gorm:"index"`
+	VariantName string     `gorm:"type:varchar(255)"`
+	Description string     `gorm:"type:text"`
+	Price       float64    `gorm:"type:decimal(10,2)"`
+	Inventory   *Inventory `gorm:"foreignKey:VariantID"`
 }
